--- a/pages/_app.css
+++ b/pages/_app.css
@@ -3,3 +3,17 @@ footer, header{
     justify-content:space-around;
     background-color: rgba(144, 144, 144, 0.266);
 }
+body{
+    text-align: center;
+}
+.form-eltern{
+    display: flex;
+    justify-content: space-around;
+    margin: 0%;
+    padding: 0%;
+    text-align: center;
+}
+
+.form-1{
+    width: 45%;
+}
