--- a/pages/_app.css
+++ b/pages/_app.css
@@ -3,9 +3,9 @@ footer, header{
     justify-content:space-around;
     background-color: rgba(144, 144, 144, 0.266);
 }
-body{
+/* body{
     text-align: center;
-}
+} */
 .form-eltern{
     display: flex;
     justify-content: space-around;
